@startuml PRS_rp

interface Controller {
    - dt: float
    + reset(): void
}

class PIDController {
    - dt: float
    - kp: float
    - ki: float
    - kd: float
    - int_limit: float
    - int_error: float
    - ang_weights: ndarray
    - vel_weights: ndarray
    + compute(state: SystemState): float
}

class LQRController {
    - dt: float
    - Q: matrix
    - R: matrix
    + compute(state: SystemState): float
}

Controller <|-- PIDController
Controller <|-- LQRController

class SystemState {
    + angles: ndarray
    + velocities: ndarray
    + cart_pos: float
    + cart_vel: float
    + site_positions: ndarray
}

class StateReader {
    + read(data): SystemState
}

class DataLogger {
    - records: list
    + log(time: float, state: SystemState, u: float)
    + save_csv(filename: str)
}

class Simulation {
    - model
    - data
    - controller: Controller
    - state_reader: StateReader
    - logger: DataLogger
    + initialize(): void
    + run(): void
}

Simulation --> Controller
Simulation --> StateReader
Simulation --> DataLogger
Simulation --> SystemState

@enduml
